[backend] websocket security 기본 설정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,6 +18,12 @@ configurations {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    // spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-messaging'
+    testImplementation 'org.springframework.security:spring-security-test'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
