--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리 라이브러리
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
