--- a/front-next/package.json
+++ b/front-next/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.3.0",
     "@mui/styled-engine-sc": "^6.3.0",
+    "axios": "^1.7.9",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
