[devops] 로깅 테스트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,16 @@ jobs:
       # 3) Build Docker Image for Spring
       - name: Build Backend Docker Image
         run: |
-          docker build -t jackpot/something-backend:latest -f backend/Dockerfile .
+          echo "==== Current Directory ===="
+          pwd
+          echo "==== List top-level files ===="
+          ls -al
+          cd backend
+          echo "==== Current Directory ===="
+          pwd
+          echo "==== List top-level files ===="
+          ls -al
+          docker build -t jackpot/something-backend:latest .
 
       # 4) Set up Node & Build Next.js
       - name: Set up Node
