[devops] db 연결정보 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,13 @@ logging.level.org.springframework=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
 logging.level.org.springframework.messaging=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mariadb://something-db.cdagcsmg4oss.ap-northeast-2.rds.amazonaws.com:3306/jackpot
+spring.datasource.username=test
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
