--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
