--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=something
 
-logging.level.org.springframework=DEBUG
-logging.level.org.springframework.web.socket=DEBUG
-logging.level.org.springframework.messaging=DEBUG
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.springframework.web.socket=INFO
+logging.level.org.springframework.messaging=INFO
+logging.level.org.springframework.security=INFO
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mariadb://something-db.cdagcsmg4oss.ap-northeast-2.rds.amazonaws.com:3306/jackpot
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.datasource.url=jdbc:mysql://something-db.cdagcsmg4oss.ap-northeast-2.rds.amazonaws.com:3306/jackpot?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=1234
 
